--- a/hello.html
+++ b/hello.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Formation GIT</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		
-		<link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="utf-8">
+    <title>Formation GIT</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	</head>
-	
+    <link rel="stylesheet" href="style.css">
 
-	<body>
+</head>
 
-		<!-- TITRE -->
-		<div id="top-banner">
-			Bienvenue dans cette formation GIT !
-		</div>
-	<div>
-		<p>J'apprends a faire du propre avec Git & GitHub</p>
-	</div>
 
-	</body>
+<body>
+
+<!-- TITRE -->
+<div id="top-banner">
+    Bienvenue dans cette formation GIT !
+</div>
+
+<!-- Description-->
+<div>
+    <h1>Ma Description</h1>
+    <p>J'apprends a faire du propre avec Git & GitHub</p>
+</div>
+
+<!-- Récompenses-->
+<div>
+    <h1>Mes Récompenses</h1>
+    <p>En construction</p>
+</div>
+
+</body>
 </html>
