--- a/hello.html
+++ b/hello.html
@@ -35,5 +35,12 @@
     <script src="https://gist.github.com/FaridBenmebarek/57dc2f3239801c85e5466ebddbb04454.js"></script>
 </div>
 
+<!--Commandes git-->
+<div>
+    <h1>Mes commandes git</h1>
+    <p>git pull</p>
+</div>
+
+
 </body>
 </html>
