ajout médaille or

--- a/hello.html
+++ b/hello.html
@@ -31,7 +31,7 @@
 
 <!--Mon Gist-->
 <div>
-    <h1>Mon Gist</h1>
+    <h1>Mon Gist via GitHub</h1>
     <script src="https://gist.github.com/FaridBenmebarek/57dc2f3239801c85e5466ebddbb04454.js"></script>
 </div>
 
